# grid-bot

./: .gitignore  ARCHITECTURE_CHANGES.md  BUFFERED_WEBSOCKET_ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_QUALITY_IMPROVEMENTS.md  IMPLEMENTATION_SUMMARY.md  POSITION_WEBSOCKET_PLAN.md  QUICK_START_LIMIT_ORDERS.md  RACE_CONDITIONS_ANALYSIS.md  README.md  pyproject.toml  requirements.txt  sol-trader.service
config/: .env.example  config.yaml  constants.py
docs/: 00-GENERAL_PLAN.md  01-getting-started.md  02-strategy.md  03-configuration.md  04-risk-management.md  05-operations.md  06-analytics.md  07-multi-symbol.md  08-architecture.md  09-development.md  10-faq.md  11-tp-distance.md  12-position-restoration.md  13-position-lifecycle.md  ADVANCED_RISK_MANAGEMENT.md  ANALYTICS_GUIDE.md  BACKGROUND_SERVICE_GUIDE.md  BOT_RECREATION_GUIDE.md  CRITICAL_FIXES_PLAN.md  IMPLEMENTATION_TODO.md  LIMIT_ORDERS.md  MIGRATION_LIMIT_ORDERS.md  MIGRATION_TO_MULTI_ACCOUNT.md  TESTING.md  TP_DISTANCE_ANALYSIS.md
scripts/: analyze.py  bot_control.sh  check_accounts_balance.py  check_balance.py  check_hedge_mode.py  check_positions_detailed.py  check_tp_orders.py  debug_order_history.py  debug_order_history_002.py  debug_order_history_v2.py  debug_restoration_step_by_step.py  fix_csv_close_reasons.py  fix_errors_log.py  pre_launch_check.py  run_background.sh  save_order_history.py  save_order_history_002.py  setup_service.sh  test_restoration_fix.py  test_tp_recovery.py
src/: __init__.py  main.py
tests/: __init__.py  conftest.py  test_advanced_risk_management.py  test_bybit_client.py  (+8 more)
(+35 files in other folders)
